--- a/AngularShop/src/index.html
+++ b/AngularShop/src/index.html
@@ -6,6 +6,18 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    //Function for theme mode
+    function getTheme(){
+      let theme = localStorage.getItem("Theme")
+      if (theme == null)
+        return "light"
+      else 
+        return theme
+    }
+    const htmlElement = document.querySelector('html');
+    htmlElement.setAttribute('data-bs-theme', getTheme());
+  </script>
 </head>
 <body>
   <app-root></app-root>
