--- a/AngularShop/src/index.html
+++ b/AngularShop/src/index.html
@@ -5,6 +5,8 @@
   <title>AngularShop</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex">
+  <!--<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">-->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script>
     //Function for theme mode
